[package]
name = "keepass"
version = "0.1.0"
authors = ["ExPixel <adolphc@outlook.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3"
bitflags = "1.0"
rand = "0.6"
xml-rs = "0.8"
base64 = "0.10"

# Crypto
sha2 = "0.8"
aes = "0.3"
pbkdf2 = "0.3"
block-modes = "0.3"
blake2 = "0.8"
hmac = "0.7"
flate2 = "1.0"
